manifests/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 443
    targetPort: 443
    protocol: TCP
  type: ClusterIP
